# rf_diffusion_all_atom

./: .gitignore  README.md  pyproject.toml  requirements.txt
RFDiffusionAA/: aa_model.py  contigs.py  diffusion.py  idealize_backbone.py  kinematics.py  run_inference.py  util.py  util_module.py
RFDiffusionAA/inference/: model_runners.py  utils.py
RFDiffusionAA/potentials/: manager.py
